--- a/instituicao/usuarios/index.html
+++ b/instituicao/usuarios/index.html
@@ -66,7 +66,7 @@
             <span class="tooltip">Avaliações</span>
         </li>
         <li class="profile">
-            <a href="../../home/login/index.html">
+            <a onclick="logout()">
                 <i class="bx bx-log-out" id="log_out"></i>
                 <span class="links_name">Log Out</span>
             </a>
