--- a/professor/perfil/index.html
+++ b/professor/perfil/index.html
@@ -21,6 +21,7 @@
   <link rel="stylesheet" href="../componentes/side_menu/styles_side_menu.css">
   <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
   <link rel="shortcut icon" href="../../home/images-global/logo-azul.svg" type="image/x-icon">
+  <script src="script.js" defer></script>
   <title>Seu perfil</title>
 </head>
 
@@ -30,132 +31,132 @@
 
   <div class="sideMenu">
     <div class="sidebar">
-        <div class="logo-details">
-            <img class="icon" src="../../../home/images-global/logo-branca.svg" alt="logo" />
-            <i class="bx bx-menu" id="btn"></i>
-        </div>
+      <div class="logo-details">
+        <img class="icon" src="../../../home/images-global/logo-branca.svg" alt="logo" />
+        <i class="bx bx-menu" id="btn"></i>
+      </div>
 
-        <li>
-            <a href="../cursos/index.html">
-                <i class="bx bx-group"></i>
-                <span class="links_name">Cursos</span>
-            </a>
-            <span class="tooltip">Cursos</span>
-        </li>
-        <li>
-            <a href="#">
-                <i class="bx bxs-graduation"></i>
-                <span class="links_name">Atividades</span>
-            </a>
-            <span class="tooltip">Atividades</span>
-        </li>
-        <li>
-            <a href="../arquivos/index.html">
-                <i class="bx bx-folder-open"></i>
-                <span class="links_name">Arquivos e links</span>
-            </a>
-            <span class="tooltip">Arquivos</span>
-        </li>
-        <li>
-            <a href="../usuarios/index.html">
-                <i class="bx bx-user"></i>
-                <span class="links_name">Usuários</span>
-            </a>
-            <span class="tooltip">Usuários</span>
-        </li>
-        <li class="profile">
-            <a href="../../../home/login/index.html">
-                <i class="bx bx-log-out" id="log_out"></i>
-                <span class="links_name">Log Out</span>
-            </a>
-            <span class="tooltip">Log Out</span>
-        </li>
+      <li>
+        <a href="../cursos/index.html">
+          <i class="bx bx-group"></i>
+          <span class="links_name">Cursos</span>
+        </a>
+        <span class="tooltip">Cursos</span>
+      </li>
+      <li>
+        <a href="#">
+          <i class="bx bxs-graduation"></i>
+          <span class="links_name">Atividades</span>
+        </a>
+        <span class="tooltip">Atividades</span>
+      </li>
+      <li>
+        <a href="../arquivos/index.html">
+          <i class="bx bx-folder-open"></i>
+          <span class="links_name">Arquivos e links</span>
+        </a>
+        <span class="tooltip">Arquivos</span>
+      </li>
+      <li>
+        <a href="../usuarios/index.html">
+          <i class="bx bx-user"></i>
+          <span class="links_name">Usuários</span>
+        </a>
+        <span class="tooltip">Usuários</span>
+      </li>
+      <li class="profile">
+        <a href="../../../home/login/index.html">
+          <i class="bx bx-log-out" id="log_out"></i>
+          <span class="links_name">Log Out</span>
+        </a>
+        <span class="tooltip">Log Out</span>
+      </li>
     </div>
   </div>
 
-    <header>
-        <div class="primeira_parte">
-            <img src="../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas" />
-            <h1 class="nomeProfessor">NOME DO PROFESSOR</h1>
-        </div>
+  <header>
+    <div class="primeira_parte">
+      <img src="../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas"/>
+      <h1 class="nomeProfessor" id="nomeProfessor">NOME DO PROFESSOR</h1>
+    </div>
 
-        <a href="./index.html">
-            <img src="../componentes/header/img/perfil_professor.svg" alt="perfil" />
-        </a>
-    </header>
+    <a href="./index.html">
+      <img src="../componentes/header/img/perfil_professor.svg" alt="perfil" id="fotoProfessor"/>
+    </a>
+  </header>
 
   <main>
-  <div class="container">
-    <h1>PERFIL DE USUÁRIO</h1>
-    <form class="row g-3">
+    <div class="container">
+      <h1>PERFIL DE USUÁRIO</h1>
+      <form class="row g-3">
 
-      <div class="profile-pic-div">
-        <img class="profile_image" id="fotoPerfil" src="img/perfil.jpeg" alt="foto de perfil">
-      </div>
+        <div class="profile-pic-div">
+          <img class="profile_image" id="fotoPerfil" src="img/perfil.jpeg" alt="foto de perfil">
+        </div>
 
-      <div class="col-md-12 email-professor">
-        <label for="email_professor" class="form-label">E-mail:</label>
-        <input id="input_email_professor" type="email" class="form-control email_professor"
-          placeholder="xxxxxxxxxxxx@email.com" disabled>
-      </div>
+        <div class="col-md-12 email-professor">
+          <label for="email_professor" class="form-label">E-mail:</label>
+          <input id="input_email_professor" type="email" class="form-control email_professor"
+            placeholder="xxxxxxxxxxxx@email.com" disabled>
+        </div>
 
-      <div class="col-md-6 nome-professor">
-        <label for="nome_professor" class="form-label">Nome:</label>
-        <input id="nome_professor" type="text" class="form-control nome_professor" placeholder="xxxxxxx xxxxxxx"
-          disabled>
-      </div>
+        <div class="col-md-6 nome-professor">
+          <label for="nome_professor" class="form-label">Nome:</label>
+          <input id="nome_professor" type="text" class="form-control nome_professor" placeholder="xxxxxxx xxxxxxx"
+            disabled>
+        </div>
 
-      <div class="col-md-6">
-        <label for="senha" class="form-label">Senha:</label>
-        <input id="senha_professor" type="password" class="form-control senha" placeholder="xxxxxxx" disabled>
-      </div>
-    </form>
-    <div class="button">
-      <div class="col-md-3">
-        <a href="./editar/index.html"><button id="segundo_botao" type="button"> EDITAR</button></a>
+        <div class="col-md-6">
+          <label for="senha" class="form-label">Senha:</label>
+          <input id="senha_professor" type="password" class="form-control senha" placeholder="xxxxxxx" disabled>
+        </div>
+      </form>
+      <div class="button">
+        <div class="col-md-3">
+          <a href="./editar/index.html"><button id="segundo_botao" type="button"> EDITAR</button></a>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="container mt-5 container modal">
-    <div>
-      <h1>DESEJA EXCLUIR ESSA CONTA?</h1>
-      <h2>Lembre-se que essa é uma ação irreversível!</h2>
+    <div class="container mt-5 container modal">
+      <div>
+        <h1>DESEJA EXCLUIR ESSA CONTA?</h1>
+        <h2>Lembre-se que essa é uma ação irreversível!</h2>
+      </div>
+
+      <div>
+        <label for="senha-label" class="form-label">Insira sua senha para confirmar a ação:</label>
+        <input type="password" id="senhaProfessor" class="form-control senha-label">
+        <p id="p-senha-incorreta">Senha Incorreta</p>
+      </div>
+
+      <div class="buttons">
+        <button class="col-md-6" id="primeiro_botao_modal" onclick="exitModal()">CANCELAR</button>
+        <button class="col-md-6" id="terceiro_botao" onclick="excluirConta()">CONFIRMAR</button>
+      </div>
+
     </div>
 
-    <div>
-      <label for="senha-label" class="form-label">Insira sua senha para confirmar a ação:</label>
-      <input type="password" id="senhaProfessor" class="form-control senha-label">
-      <p id="p-senha-incorreta">Senha Incorreta</p>
     </div>
-
-    <div class="buttons">
-      <button class="col-md-6" id="primeiro_botao_modal" onclick="exitModal()">CANCELAR</button>
-      <button class="col-md-6" id="terceiro_botao" onclick="excluirConta()">CONFIRMAR</button>
-    </div>
-
-  </div>
-
-  </div>
-</main>
+  </main>
 
   <script>
     let sidebar = document.querySelector(".sidebar");
     let closeBtn = document.querySelector("#btn");
 
     closeBtn.addEventListener("click", () => {
-        sidebar.classList.toggle("open");
-        menuBtnChange();
+      sidebar.classList.toggle("open");
+      menuBtnChange();
     });
 
     function menuBtnChange() {
-        if (sidebar.classList.contains("open")) {
-            closeBtn.classList.replace("bx-menu", "bx-menu-alt-right");
-        } else {
-            closeBtn.classList.replace("bx-menu-alt-right", "bx-menu");
-        }
+      if (sidebar.classList.contains("open")) {
+        closeBtn.classList.replace("bx-menu", "bx-menu-alt-right");
+      } else {
+        closeBtn.classList.replace("bx-menu-alt-right", "bx-menu");
+      }
     }
-</script>
+  </script>
 
 </body>
 
