--- a/professor/perfil/editar/index.html
+++ b/professor/perfil/editar/index.html
@@ -33,6 +33,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet" />
 
     <link rel="shortcut icon" href="../../../home/images-global/logo-azul.svg" type="image/x-icon" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js"></script>
     <script src="script.js" defer></script>
     <title>Editar Perfil</title>
 </head>
