modal de turmas parcialmente responsivo

--- a/professor/cursos/turmas/index.html
+++ b/professor/cursos/turmas/index.html
@@ -87,7 +87,7 @@
         <a href="../../perfil/index.html">
             <img class="iconePerfilProfessor" src="../../componentes/header/img/perfil_professor.svg" alt="icone">
         </a>
-    </header>
+    </header>x
 
     <div class="container-geral">
         <div class="container">
@@ -225,7 +225,7 @@
 
             <div class="buttons">
                 <div class="col-md-3">
-                    <button class="segundo_botao" type="button" onclick="exitModalTurma()">SAIR</button>
+                    <button class="segundo_botao" id="sairModalTurma" type="button" onclick="exitModalTurma()">SAIR</button>
                 </div>
 
                 <div class="col-md-3">
