fazendo tela de arquivos do professor

--- a/professor/arquivos/index.html
+++ b/professor/arquivos/index.html
@@ -91,39 +91,41 @@
             </a>
         </div>
 
-        <div class="container-arquivos">
+        <ul class="container-arquivos">
 
-            <div class="pasta-arquivo">
+            <li class="pasta-arquivo">
+                <img src="img/icone_pasta.svg" alt="pasta">
+                <p id="nomeArquivoPasta">Exemplo</p>
+                <img src="img/icone_opcoes.svg" alt="opcões">
+                <i id="editIcon" class='bx bxs-edit-alt' ></i>
+                <i id="trashIcon" class='bx bxs-trash-alt' ></i>
+            </li>
+
+            <li class="pasta-arquivo">
                 <img src="img/icone_pasta.svg" alt="pasta">
                 <p id="nomeArquivoPasta">Exemplo</p>
                 <img src="" alt="">
-            </div>
+            </li>
 
-            <div class="pasta-arquivo">
+            <li class="pasta-arquivo">
                 <img src="img/icone_pasta.svg" alt="pasta">
                 <p id="nomeArquivoPasta">Exemplo</p>
                 <img src="" alt="">
-            </div>
+            </li>
 
-            <div class="pasta-arquivo">
+            <li class="pasta-arquivo">
                 <img src="img/icone_pasta.svg" alt="pasta">
                 <p id="nomeArquivoPasta">Exemplo</p>
                 <img src="" alt="">
-            </div>
+            </li>
 
-            <div class="pasta-arquivo">
+            <li class="pasta-arquivo">
                 <img src="img/icone_pasta.svg" alt="pasta">
                 <p id="nomeArquivoPasta">Exemplo</p>
                 <img src="" alt="">
-            </div>
+            </li>
 
-            <div class="pasta-arquivo">
-                <img src="img/icone_pasta.svg" alt="pasta">
-                <p id="nomeArquivoPasta">Exemplo</p>
-                <img src="" alt="">
-            </div>
-
-        </div>
+        </ul>
 
     </main>
 
