Integração de Professor

--- a/professor/arquivos/index.html
+++ b/professor/arquivos/index.html
@@ -91,41 +91,39 @@
             </a>
         </div>
 
-        <ul class="container-arquivos">
+        <div class="container-arquivos">
 
-            <li class="pasta-arquivo">
-                <img src="img/icone_pasta.svg" alt="pasta">
-                <p id="nomeArquivoPasta">Exemplo</p>
-                <img src="img/icone_opcoes.svg" alt="opcões">
-                <i id="editIcon" class='bx bxs-edit-alt' ></i>
-                <i id="trashIcon" class='bx bxs-trash-alt' ></i>
-            </li>
-
-            <li class="pasta-arquivo">
+            <div class="pasta-arquivo">
                 <img src="img/icone_pasta.svg" alt="pasta">
                 <p id="nomeArquivoPasta">Exemplo</p>
                 <img src="" alt="">
-            </li>
+            </div>
 
-            <li class="pasta-arquivo">
+            <div class="pasta-arquivo">
                 <img src="img/icone_pasta.svg" alt="pasta">
                 <p id="nomeArquivoPasta">Exemplo</p>
                 <img src="" alt="">
-            </li>
+            </div>
 
-            <li class="pasta-arquivo">
+            <div class="pasta-arquivo">
                 <img src="img/icone_pasta.svg" alt="pasta">
                 <p id="nomeArquivoPasta">Exemplo</p>
                 <img src="" alt="">
-            </li>
+            </div>
 
-            <li class="pasta-arquivo">
+            <div class="pasta-arquivo">
                 <img src="img/icone_pasta.svg" alt="pasta">
                 <p id="nomeArquivoPasta">Exemplo</p>
                 <img src="" alt="">
-            </li>
+            </div>
 
-        </ul>
+            <div class="pasta-arquivo">
+                <img src="img/icone_pasta.svg" alt="pasta">
+                <p id="nomeArquivoPasta">Exemplo</p>
+                <img src="" alt="">
+            </div>
+
+        </div>
 
     </main>
 
