--- a/professor/cursos/index.html
+++ b/professor/cursos/index.html
@@ -16,7 +16,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
-        <link rel="shortcut icon" href="../../home/images-global/logo-azul.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="../../home/images-global/logo-azul.svg" type="image/x-icon" />
+    <script src="script.js" defer></script>
     <title>Cursos</title>
 </head>
 
@@ -80,99 +81,12 @@
     <div class="container-geral">
         <div class="container">
             <div class="col-md-6 for-cnp cursos_existentes icon">
-                <input type="text" placeholder="Insira o curso que procura:" class="form-control cursos_ex" />
+                <input type="text" placeholder="Insira o curso que procura:" class="form-control cursos_ex" id="inputBuscarCurso" />
                 <i class="fa fa-search" style="font-size: 24px"></i>
             </div>
 
-            <ul class="list-group ul-curso-existen">
-                <li class="list-group-item li">
-                    <div class="curso">
-                        <p class="curso">Curso:</p>
-                        <img class="book" src="./img/icone_curso.svg" alt="book" />
-                        <p class="nome" id="nomeCurso">NOME</p>
-                    </div>
-                    <div class="button">
-                        <a href="turmas/index.html">
-                            <button class="terceiro_botao" id="btnEntrarCurso">
-                                TURMAS EXISTENTES
-                            </button>
-                        </a>
-                    </div>
-                </li>
-
-                <img src="./img/linha.svg" alt="" />
-
-                <li class="list-group-item li">
-                    <div class="curso">
-                        <p class="curso">Curso:</p>
-                        <img class="book" src="./img/icone_curso.svg" alt="book" />
-                        <p class="nome" id="nomeCurso">NOME</p>
-                    </div>
-                    <div class="button">
-                        <button class="terceiro_botao" id="btnEntrarCurso">
-                            TURMAS EXISTENTES
-                        </button>
-                    </div>
-                </li>
-                <img src="./img/linha.svg" alt="" />
-
-                <li class="list-group-item li">
-                    <div class="curso">
-                        <p class="curso">Curso:</p>
-                        <img class="book" src="./img/icone_curso.svg" alt="book" />
-                        <p class="nome" id="nomeCurso">NOME</p>
-                    </div>
-                    <div class="button">
-                        <button class="terceiro_botao" id="btnEntrarCurso">
-                            TURMAS EXISTENTES
-                        </button>
-                    </div>
-                </li>
-
-                <img src="./img/linha.svg" alt="" />
-
-                <li class="list-group-item li">
-                    <div class="curso">
-                        <p class="curso">Curso:</p>
-                        <img class="book" src="./img/icone_curso.svg" alt="book" />
-                        <p class="nome" id="nomeCurso">NOME</p>
-                    </div>
-                    <div class="button">
-                        <button class="terceiro_botao" id="btnEntrarCurso">
-                            TURMAS EXISTENTES
-                        </button>
-                    </div>
-                </li>
-
-                <img src="./img/linha.svg" alt="" />
-
-                <li class="list-group-item li">
-                    <div class="curso">
-                        <p class="curso">Curso:</p>
-                        <img class="book" src="./img/icone_curso.svg" alt="book" />
-                        <p class="nome" id="nomeCurso">NOME</p>
-                    </div>
-                    <div class="button">
-                        <button class="terceiro_botao" id="btnEntrarCurso">
-                            TURMAS EXISTENTES
-                        </button>
-                    </div>
-                </li>
-
-                <img src="./img/linha.svg" alt="" />
-
-                <li class="list-group-item li">
-                    <div class="curso">
-                        <p class="curso">Curso:</p>
-                        <img class="book" src="./img/icone_curso.svg" alt="book" />
-                        <p class="nome" id="nomeCurso">NOME</p>
-                    </div>
-                    <div class="button">
-                        <button class="terceiro_botao" id="btnEntrarCurso">
-                            TURMAS EXISTENTES
-                        </button>
-                    </div>
-                </li>
+            <ul class="list-group" id="ul_container">
+                
             </ul>
         </div>
     </div>
