Professor lista informações da Turma

--- a/instituicao/cursos/turmas/index.html
+++ b/instituicao/cursos/turmas/index.html
@@ -30,34 +30,34 @@
             <img class="icon" src="../../../home/images-global/logo-branca.svg" alt="logo" />
             <i class="bx bx-menu" id="btn"></i>
         </div>
-            <li>
-                <a href="../index.html">
-                    <i class="bx bx-group"></i>
-                    <span class="links_name">Cursos existentes</span>
-                </a>
-                <span class="tooltip">Cursos</span>
-            </li>
-            <li>
-                <a href="../../usuarios/index.html">
-                    <i class="bx bx-user"></i>
-                    <span class="links_name">Usuários cadastrados</span>
-                </a>
-                <span class="tooltip">Usuários</span>
-            </li>
-            <li>
-                <a href="#">
-                    <i class="bx bx-edit"></i>
-                    <span class="links_name">Formulário da banca</span>
-                </a>
-                <span class="tooltip">Avaliações</span>
-            </li>
-            <li class="profile">
-                <a onclick="logout()">
-                    <i class="bx bx-log-out" id="log_out"></i>
-                    <span class="links_name">Log Out</span>
-                </a>
-                <span class="tooltip">Log Out</span>
-            </li>
+        <li>
+            <a href="../index.html">
+                <i class="bx bx-group"></i>
+                <span class="links_name">Cursos existentes</span>
+            </a>
+            <span class="tooltip">Cursos</span>
+        </li>
+        <li>
+            <a href="../../usuarios/index.html">
+                <i class="bx bx-user"></i>
+                <span class="links_name">Usuários cadastrados</span>
+            </a>
+            <span class="tooltip">Usuários</span>
+        </li>
+        <li>
+            <a href="#">
+                <i class="bx bx-edit"></i>
+                <span class="links_name">Formulário da banca</span>
+            </a>
+            <span class="tooltip">Avaliações</span>
+        </li>
+        <li class="profile">
+            <a onclick="logout()">
+                <i class="bx bx-log-out" id="log_out"></i>
+                <span class="links_name">Log Out</span>
+            </a>
+            <span class="tooltip">Log Out</span>
+        </li>
     </div>
 
     <script>
@@ -101,7 +101,8 @@
             </ul>
         </div>
 
-        <button id="button_modal_cadastrar_turma" class="button5"> <i class="fa fa-plus" style="font-size:36px"></i></button>
+        <button id="button_modal_cadastrar_turma" class="button5"> <i class="fa fa-plus"
+                style="font-size:36px"></i></button>
 
     </div>
 
@@ -332,7 +333,8 @@
 
             <div class="buttons">
                 <div class="col-md-3">
-                    <button id="button-close-modal" class="segundo_botao" type="button" onclick="exitModalTurma()">SAIR</button>
+                    <button id="button-close-modal" class="segundo_botao" type="button"
+                        onclick="exitModalTurma()">SAIR</button>
                 </div>
 
                 <div class="col-md-3">
@@ -486,7 +488,8 @@
 
         </ul>
         <div class="buttons-modal">
-            <div class="col-md-3"> <button class="segundo_botao" type="button" onclick="showModalTurma()">VOLTAR</button> </div>
+            <div class="col-md-3"> <button class="segundo_botao" type="button"
+                    onclick="showModalTurma()">VOLTAR</button> </div>
             <!-- <div class="col-md-3"> <button class="terceiro_botao" type="button" onclick="showModalAddMembrosTurmaCriada()">ADICIONAR MEMBROS</button> </div> -->
         </div>
     </div>
@@ -503,7 +506,7 @@
                 <button class="segundo_botao" onclick="exitModalGrupos()" type="button">CANCELAR</button>
             </div>
         </div>
-        
+
     </div>
 
     <div class="container modal modal-excluir">
